# ashell

./: LICENSE  main.py  pyproject.toml
modules/: app_launcher.py
styles/: app_launcher.css  main.css
